# setrain-tasnet

./: .gitignore  LitModule.py  Loss.py  README.md  main.py  option.py  pyproject.toml  run_sweep.py  todo  train.py  train.yml  utils.py
datasets_related/: Datasets.py  cv_mix.scp  cv_s1.scp  genscp.py
models/: LitConvTasnet.py  LitGTCRN.py  convtasnet.py  gtcrn.py  gtcrn_deeper1.py  gtcrn_dense.py  gtcrn_end2end.py  gtcrn_wider.py  tempCodeRunnerFile.py
test/: sfe.py
utils/: Loss.py  dev_modules.py  loss_factory.py  scheduler.py  tcn.py  utils.py
utils/configs/: train_gtcrn.yml
